--- a/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
@@ -3,13 +3,13 @@ info:
   version: '2.0'
   title: Assessment - Service
   description: >-
-    Assessment Service of Ekstep Learning Platform provides resources to create,
+    Assessment Service of EkStep Learning Platform provides resources to create,
     manage and search Assessment Items and ItemSets. AssessmentItem API provides
     resources to work with questions in the platform and ItemSet API provides
     resources to create and manage ItemSets.
   license:
-    name: Ekstep License
-    url: 'http:www.ekstep.in'
+    name: EkStep License
+    url: 'http:www.EkStep.in'
 basePath: /v1
 securityDefinitions: {}
 consumes:
@@ -291,7 +291,7 @@ paths:
       summary: Deletes an ItemSet
       description: >-
         This API is used to delete an Item set from the ItemSet repository of
-        Ekstep Platform.
+        EkStep Platform.
       tags:
         - ItemSet
       operationId: itemSet.delete
@@ -402,7 +402,7 @@ paths:
       security: []
   '/assessmentitemset/generate/{ItemSetId}':
     get:
-      summary: ' Genearates an ItemSet'
+      summary: ' Generates an ItemSet'
       description: >-
         This API is used to generate an ItemSet from ItemSet Repository of
         EkStep Platform. This endpoint returns the entire ItemSet Object with
