--- a/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
@@ -4,9 +4,10 @@ info:
   title: Definitions
   description: >-
     The Definitions API of Ekstep Learning Platform provides details of all
-    definitions of different objectTypes supported by the Platform 
+    definitions of all objectTypes supported by the Platform
   license:
     name: Ekstep License
+    url: 'http:www.ekstep.in'
 securityDefinitions: {}
 consumes:
   - application/json
@@ -14,14 +15,14 @@ produces:
   - application/json
 tags:
   - name: Definitions
-    description: Everything related to the GET operations of the Definitions
+    description: Provides Details about All Definitions of the Platform
 paths:
   /taxonomy/domain/definition:
     get:
       summary: Gets All Definitions
       description: >-
-        This _definitions_ endpoint returns all the definitions available in the
-        Ekstep Platform fo different Object types
+        This API returns all the definitions of all ObjectTypes supported by the
+        Ekstep Learning Platform
       tags:
         - Definitions
       operationId: definition.list
@@ -49,10 +50,10 @@ paths:
       security: []
   '/taxonomy/domian/definition/{objectType}':
     get:
-      summary: Gets specific Definition
+      summary: Gets Specific Definition
       description: >-
-        This _definition_ endpoint returns of specific definition from the
-        Ekstep platform based on the specified object type from the user
+        This API returns specific definition,its properties and relations based
+        on the specified object type
       tags:
         - Definitions
       operationId: definition.find
@@ -87,17 +88,40 @@ paths:
 definitions:
   getAllDefinitionsResponse:
     type: object
-    title: result
     properties:
-      headers:
-        $ref: '#/definitions/ResponseHeader'
+      id:
+        type: string
+        description: API Identifier
+      ver:
+        type: string
+        description: API version information
+      ts:
+        type: string
+        description: API execution timespan
+      params:
+        $ref: '#/definitions/ResponseParams'
+      responseCode:
+        type: string
+        description: API response code
       result:
         $ref: '#/definitions/getAllDefinitionNode'
   getDefinitionResponse:
     type: object
     properties:
-      headers:
-        $ref: '#/definitions/ResponseHeader'
+      id:
+        type: string
+        description: API Identifier
+      ver:
+        type: string
+        description: API version information
+      ts:
+        type: string
+        description: API execution timespan
+      params:
+        $ref: '#/definitions/ResponseParams'
+      responseCode:
+        type: string
+        description: API response code
       result:
         $ref: '#/definitions/result'
   getAllDefinitionNode:
@@ -207,24 +231,6 @@ definitions:
       description:
         type: string
         description: description
-  ResponseHeader:
-    title: ResponseHeader
-    type: object
-    properties:
-      id:
-        type: string
-        description: API Identifier
-      ver:
-        type: string
-        description: API version information
-      ts:
-        type: string
-        description: API execution timespan
-      params:
-        $ref: '#/definitions/ResponseParams'
-      responseCode:
-        type: string
-        description: API response code
   ResponseParams:
     title: Response Parameter
     type: object
@@ -262,11 +268,6 @@ definitions:
       responseCode:
         type: string
         description: responseCode
-      result:
-        properties:
-          result:
-            type: string
-            description: result
   FailedResponseParams:
     title: Failed Response Parameter
     type: object
