fixed request and response issues for swagger docs

--- a/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis_deployable.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis_deployable.yaml
@@ -11,7 +11,10 @@ info:
     name: EkStep License
     url: 'http:www.EkStep.in'
 basePath: /v1
+host: api.ekstep.in
 securityDefinitions: {}
+schemes:
+ - "https"
 consumes:
   - application/json
 produces:
