--- a/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
@@ -9,6 +9,9 @@ info:
     name: Ekstep License
     url: 'http:www.ekstep.in'
 securityDefinitions: {}
+host: api.ekstep.in
+schemes:
+  - https
 consumes:
   - application/json
 produces:
