--- a/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis_deployable.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis_deployable.yaml
@@ -9,6 +9,8 @@ info:
     name: EkStep License
     url: 'http:www.EkStep.in'
 securityDefinitions: {}
+schemes:
+  - https
 consumes:
   - application/json
 produces:
