fixed issues for swagger docs

--- a/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
@@ -370,8 +370,8 @@ paths:
     post:
       summary: Search an ItemSet
       description: >-
-        This API is used to search and retrive all ItemSets from the Item
-        repository based on the given search creteria in the request body
+        This API is used to search and retriEve all ItemSets from the Item
+        repository based on the given search criteria in the request body
       tags:
         - ItemSet
       operationId: itemSet.search
@@ -935,7 +935,7 @@ definitions:
         description: total number of items
       gradeLevel:
         type: object
-        description: gradelevel
+        description: gradeLevel
       maxScore:
         type: object
         description: maxScore
