--- a/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apis.yaml
@@ -18,7 +18,7 @@ produces:
   - application/json
 tags:
   - name: Domains
-    description: Everything related to Domian Operations
+    description: Everything related to domain Operations
   - name: Domain Objects
     description: Everything related to Domain Objects & their Operations
 paths:
@@ -178,7 +178,7 @@ paths:
         This API is used to create a dimension into the _EkStep Platform_ with
         the metadata provided as part of request body, there are certain fields
         marked as mandatory for which the value has to be given in order to
-        create the dimension into the platfrom, This endpoint returns the node
+        create the dimension into the platform, This endpoint returns the node
         id as _node_id_ i.e. the identifier of created dimension.
       tags:
         - Domain Objects
@@ -265,7 +265,7 @@ paths:
         This API is used to update the given dimension with the metadata
         provided as part of request body, there are certain fields marked as
         mandatory for which the value has to be given in order to update the
-        dimension into the platfrom, This endpoint returns the node id as
+        dimension into the platform, This endpoint returns the node id as
         _node_id_ i.e. the identifier of updated dimension
       tags:
         - Domain Objects
@@ -312,7 +312,7 @@ paths:
     post:
       summary: Search Dimensions Based On Search Criteria
       description: >-
-        This API is used run a search query on the domian graph for a given
+        This API is used run a search query on the domain graph for a given
         domainId to fetch the dimensions from the EkStep platform.This API
         returns the dimensions based on the search criteria provided in the
         request body
@@ -443,7 +443,7 @@ paths:
         This API is used to create a concept into the _EkStep Platform_ with the
         metadata provided as part of request body, there are certain fields
         marked as mandatory for which the value has to be given in order to
-        create the concept into the platfrom, This endpoint returns the node id
+        create the concept into the platform, This endpoint returns the node id
         as _node_id_ i.e. the identifier of created concept.
       tags:
         - Domain Objects
@@ -683,7 +683,7 @@ paths:
         This API is used to update the given concept, with the metadata provided
         as part of request body, there are certain fields marked as mandatory
         for which the value has to be given in order to update the concept into
-        the platfrom, This endpoint returns the node id as _node_id_ i.e. the
+        the platform, This endpoint returns the node id as _node_id_ i.e. the
         identifier of updated concept.
       tags:
         - Domain Objects
@@ -701,7 +701,7 @@ paths:
           required: true
           description: Concept identifier (concepts are unique within a domain)
           type: string
-        - name: upadate Concept request
+        - name: update Concept request
           in: body
           required: true
           schema:
@@ -785,7 +785,7 @@ paths:
     post:
       summary: Search Concepts Based On Search Criteria
       description: >-
-        This API is used run a search query on the domian graph of EkStep
+        This API is used run a search query on the domain graph of EkStep
         platform.This endpoint returns the concepts based on the search criteria
         provided in the request body
       tags:
@@ -829,7 +829,7 @@ paths:
       summary: Gets All Live Methods
       description: >-
         This API is used to get all the live methods from the EkStep Platform.
-        This enpoint returns details of all methods
+        This endpoint returns details of all methods
       tags:
         - Domain Objects
       operationId: domain.methods.list
@@ -868,7 +868,7 @@ paths:
         This API is used to create a method into the _EkStep Platform_ with the
         metadata provided as part of request body, there are certain fields
         marked as mandatory for which the value has to be given in order to
-        create the method into the platfrom, The _method_ endpoint returns the
+        create the method into the platform, The _method_ endpoint returns the
         node id as _node_id_ i.e. the identifier of created method.
       tags:
         - Domain Objects
@@ -888,7 +888,7 @@ paths:
             $ref: '#/definitions/createMethodRequest'
       responses:
         '200':
-          description: Method created successsfully
+          description: Method created successfully
           schema:
             $ref: '#/definitions/createMethodResponse'
         '400':
@@ -957,7 +957,7 @@ paths:
         This API is used to update the given method, with the metadata provided
         as part of request body, there are certain fields marked as mandatory
         for which the value has to be given in order to update the concept into
-        the platfrom, The _method_ endpoint returns the node id as _node_id_
+        the platform, The _method_ endpoint returns the node id as _node_id_
         i.e. the identifier of updated method.
       tags:
         - Domain Objects
@@ -1046,7 +1046,7 @@ paths:
     post:
       summary: Search Methods Based On Search Criteria
       description: >-
-        This API is used run a search query on the domian graph of EkStep
+        This API is used run a search query on the domain graph of EkStep
         platform.This API returns the methods based on the search criteria
         provided in the request body
       tags:
@@ -1129,7 +1129,7 @@ paths:
         This API is used to create misconception into the _EkStep Platform_ with
         the metadata provided as part of request body, there are certain fields
         marked as mandatory for which the value has to be given in order to
-        create the misconception into the platfrom, This endpoint returns the
+        create the misconception into the platform, This endpoint returns the
         node id as _node_id_ i.e. the identifier of created misconception.
       tags:
         - Domain Objects
@@ -1220,7 +1220,7 @@ paths:
         This API is used to update specific misconception, with the metadata
         provided as part of request body, there are certain fields marked as
         mandatory for which the value has to be given in order to update the
-        misconception into the platfrom, This endpoint returns the node id as
+        misconception into the platform, This endpoint returns the node id as
         _node_id_ i.e. the identifier of updated misconception.
       tags:
         - Domain Objects
@@ -1311,7 +1311,7 @@ paths:
     post:
       summary: Search Misconceptions Based On Search Criteria
       description: >-
-        This API is used run a search query on domian graph of the EkStep
+        This API is used run a search query on domain graph of the EkStep
         platform.This endpoint returns misconceptions based on the search
         criteria provided in the request body
       tags:
@@ -2075,7 +2075,7 @@ definitions:
       params:
         $ref: '#/definitions/ResponseParams'
       responseCode:
-        type: object
+        type: string
         description: API response code
       result:
         $ref: '#/definitions/getAllMisconceptionObject'
@@ -2536,7 +2536,7 @@ definitions:
         description: objectType
       relation:
         type: string
-        description: realtion
+        description: relation
       description:
         type: string
         description: description
@@ -2648,5 +2648,5 @@ definitions:
       params:
         $ref: '#/definitions/ResponseParams'
       responseCode:
-        type: object
+        type: string
         description: 'API response code '
