--- a/searchIndex-platform/module/composite-search-api/pom.xml
+++ b/searchIndex-platform/module/composite-search-api/pom.xml
@@ -69,6 +69,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
