--- a/searchIndex-platform/module/composite-search-api/pom.xml
+++ b/searchIndex-platform/module/composite-search-api/pom.xml
@@ -86,4 +86,36 @@
 			<type>jar</type>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<aggregate>true</aggregate>
+						<outputDirectory>coverageReport</outputDirectory>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<instrumentation>
+							<ignoreTrivial>true</ignoreTrivial>
+							<excludes>
+								<exclude>**/common/**</exclude>
+								<exclude>**/dto/**</exclude>
+								<exclude>**/enums/**</exclude>
+								<exclude>**/router/**</exclude>
+							</excludes>
+						</instrumentation>
+						<check>
+							<haltOnFailure>false</haltOnFailure>
+						</check>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
