--- a/searchIndex-platform/module/searchindex-elasticsearch/pom.xml
+++ b/searchIndex-platform/module/searchindex-elasticsearch/pom.xml
@@ -85,4 +85,32 @@
 			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<aggregate>true</aggregate>
+						<outputDirectory>coverageReport</outputDirectory>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<instrumentation>
+							<excludes>
+								<exclude>**/**</exclude>
+							</excludes>
+						</instrumentation>
+						<check>
+							<haltOnFailure>false</haltOnFailure>
+						</check>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
