--- a/language-platform/module/services/pom.xml
+++ b/language-platform/module/services/pom.xml
@@ -63,6 +63,27 @@
 						<target>${maven.compiler.source}</target>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<aggregate>true</aggregate>
+						<outputDirectory>coverageReport</outputDirectory>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<instrumentation>
+							<excludes>
+								<exclude>**/**</exclude>
+							</excludes>
+						</instrumentation>
+						<check>
+							<haltOnFailure>false</haltOnFailure>
+						</check>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<finalName>language-service</finalName>
