--- a/language-platform/module/actors/pom.xml
+++ b/language-platform/module/actors/pom.xml
@@ -40,5 +40,10 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.10</version>
+		</dependency>
 	</dependencies>
 </project>
