elastic-search property change

--- a/platform-modules/service/src/test/resources/elasticsearch.properties
+++ b/platform-modules/service/src/test/resources/elasticsearch.properties
@@ -6,5 +6,6 @@ time-zone=0530
 bulk-load-batch-size=500
 connection-timeout=30
 ekstepPlatformURI=http://localhost:8080/learning-service
+platform-api-url=http://localhost:8080/learning-service
 ekstepPlatformApiUserId=ilimi
 DefinitionURL=http://localhost:8080/learning-service/taxonomy/
