--- a/platform-devops/ansible/roles/startservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/startservice/tasks/main.yml
@@ -32,6 +32,11 @@
   shell: ps -ef | grep logstash | grep language-graph-events.conf | grep -v grep | wc -l
   register: language_process
 
+- name: Check if logstash for word events is running
+  become_user: ec2-user
+  shell: ps -ef | grep logstash | grep logstash-word-events.conf | grep -v grep | wc -l
+  register: word_events_process
+
 
 - name: Run logstash
   become_user: ec2-user
@@ -49,6 +54,14 @@
   async: 60
   poll: 30
   when: "language_process.stdout == '0'"
+
+- name: Run logstash for word events
+  become_user: ec2-user
+  become: yes
+  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-word-events.conf -v &
+  async: 60
+  poll: 30
+  when: "word_events_process.stdout == '0'"
 
 - name: start tomcat
   become: yes
