--- a/platform-ui/scripts/itemImport/mcq_mapping_v2.json
+++ b/platform-ui/scripts/itemImport/mcq_mapping_v2.json
@@ -102,6 +102,49 @@
 		"model": {
 			"param1": {"col-def": {"column" : 26, "type": "string"}},
 			"param2": {"col-def": {"column" : 27, "type": "string"}}
-		}
+		},
+
+		"responses": [
+			{
+				"start": 28, "length": 4,"type": "response",
+                "values":{
+                    "true" : {"col-def":{"column":28, "type":"List"}},
+                    "false": {"col-def":{"column":29, "type":"List"}}
+                 },
+
+                 "score": {"col-def": {"column" : 30, "type":"number"}},
+                 "mmc": {"col-def":{"column": 31, "type":"List"}}
+            },
+             {
+				"start": 32, "length": 4,"type": "response",
+                "values":{
+                    "true" : {"col-def":{"column":32, "type":"List"}},
+                    "false": {"col-def":{"column":33, "type":"List"}}
+                 },
+
+                 "score": {"col-def": {"column" : 34, "type":"number"}},
+                 "mmc": {"col-def":{"column": 35, "type":"List"}}
+            },
+             {
+				"start": 36, "length": 4,"type": "response",
+                "values":{
+                    "true" : {"col-def":{"column":36, "type":"List"}},
+                    "false": {"col-def":{"column":37, "type":"List"}}
+                 },
+
+                 "score": {"col-def": {"column" : 38, "type":"number"}},
+                 "mmc": {"col-def":{"column": 39, "type":"List"}}
+            },
+             {
+				"start": 40, "length": 4,"type": "response",
+                "values":{
+                    "true" : {"col-def":{"column":40, "type":"List"}},
+                    "false": {"col-def":{"column":41, "type":"List"}}
+                 },
+
+                 "score": {"col-def": {"column" : 42, "type":"number"}},
+                 "mmc": {"col-def":{"column": 43, "type":"List"}}
+            }
+		]
 	}
 }
